Commin login and routing of front end

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_LOCALHOST = http://localhost:8080/api
+REACT_APP_TOKEN = eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE2NjM2NTUxMTEsImV4cCI6MTY2MzgyNzkxMX0.m6qt6x1rd0j8f36o7-8VaFhrAr1kQ95u_gZOXlEoNs8
